#
# kyo-rs - Rust rewrite of kyo, a modern osu! server switcher
# Copyright (C) 2018 Marc3842h
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "kyo-rs"
version = "0.0.1"
authors = [ "Marc3842h <info@marcsteiner.me>" ]
readme = "README.md"
publish = false
build = "build.rs"

[profile.dev]
opt-level         =  3          # apply all optimizations
debug             =  true       # debug information
debug-assertions  =  true       # runtime validation (debug/development builds)
overflow-checks   =  true       # panic will occur on overflow
lto               =  "fat"      # perform optimizations across all crates within the dependency graph
panic             =  "abort"    # Terminate the process upon panic
incremental       =  true       # improves re-compile times
codegen-units     =  256        # crate to be processed in parallel (256 for incremental builds)
rpath             =  false      # disable rpath flag


[profile.release]
opt-level         =  3          # apply all optimizations
debug             =  false      # debug information
debug-assertions  =  false      # runtime validation (debug/development builds)
overflow-checks   =  false      # panic will occur on overflow
lto               =  "fat"      # perform optimizations across all crates within the dependency graph
panic             =  "abort"    # Unwind the stack upon panic
incremental       =  false      # improves re-compile times
codegen-units     =  16         # crate to be processed in parallel (16 for non-incremental builds)
rpath             =  false      # disable rpath flag


[profile.test]
opt-level         =  3          # apply all optimizations
debug             =  true       # debug information
debug-assertions  =  true       # runtime validation (debug/development builds)
overflow-checks   =  true       # panic will occur on overflow
lto               =  "fat"      # perform optimizations across all crates within the dependency graph
# panic           =  "abort"    # Terminate the process upon panic (ignored for test profile)
incremental       =  true       # improves re-compile times
codegen-units     =  256        # crate to be processed in parallel (256 for incremental builds)
rpath             =  false      # disable rpath flag

[dependencies]
web-view = "0.2.1"
serde_json = "1.0.31"
libc = "0.2.43"
hyper = "0.12.11"
reqwest = "0.9.2"

[build-dependencies]
html-minifier = "1.1.2"
base64 = "0.9.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [ "shellapi", "wincrypt" ] }
user32-sys = "0.2.0"
winrt = { version = "0.5.1", features = [ "windows-data", "windows-ui" ] }
winrt-notification = "0.2.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.6"

[target.'cfg(unix)'.dependencies]
notify-rust = "3.4.2"
